# Project-Stellar

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Design.md  PLAN.md  README.md
.codex/: config.toml
.codex/agents/: carmack.toml  director.toml  kojima.toml  miyamoto.toml  molyneux.toml  suzuki.toml
.kilo/: agent-manager.json  tasks.md
.kilo/agents/: carmack.md  director.md  kojima.md  miyamoto.md  molyneux.md  suzuki.md
.kilo/plans/: 1777234477196-nimble-eagle.md  1777236484313-quick-star.md  1777257747393-clever-tiger.md  1777322342684-crisp-harbor.md  glTF-implementation-plan.md  glTF-vulkan-parity.md
Plans/: BspPresentationNetworkingPolish-AgentPlan.md  CodexPrompt-NextImplementationRound.md  Impoter-Split.md  NEXT.md  Phase5E10.md  Phase5E8.md  Phase5E9.md  Phase5F.md  Phase6A-LevelCollisionExtraction.md  Phase6B-CollisionQueriesAndMovement.md  Phase6C-BillboardSpriteRendering.md  Phase6D-WorldMetadataFromGltf.md  Phase7A-StatusAlignment-RenderFiltering-Hardening.md  Phase7B-RobustStaticCharacterMovement.md  Phase7C-RuntimeWorldAssembly.md  Phase7D-RuntimeTriggersAndMetadataHooks.md  Phase7E-CollisionBroadphaseAndDiagnostics.md  ProjectStellar-BSP-GameplayLoop-AgentPlan.md  ProjectStellar-Camera-Height-Look-Controls-AgentPlan.md  ProjectStellar-DoxygenGen-Sanitization-CodexPlan.md  ProjectStellar-FGD-Targetname-TargetRouting-Cleanup-AgentPlan.md  ProjectStellar-NextCollisionPlans.md  ProjectStellar-Phase10-LuaScripting-AgentPlan.md  ProjectStellar-Phase9PlayableLoopPlans.md  ProjectStellar-SDL-Display-Startup-Investigation-Plan.md  ProjectStellar-SocketTransport-AgentPlan.md  ProjectStellar-Spotlight-Angle-Compatibility-AgentPlan.md  ProjectStellar-Texture-Scale-Color-TrenchBroomProfile-FollowupPlan.md  TrenchBroomCompat-AgentPlan.md  project_stellar_removable_complexity_agent_plan.md
Plans/Archived/: AudioFootsteps-AgentPlan.md  ClientServerSplit-AgentPlan.md  Importer-Split.md  Phase5E10.md  Phase5E8.md  Phase5E9.md  Phase6A-LevelCollisionExtraction.md  Phase6D-WorldMetadataFromGltf.md  Phase7A-StatusAlignment-RenderFiltering-Hardening.md  Phase7B-RobustStaticCharacterMovement.md  ProjectStellar-BakedLighting-GlobalAmbient-ImplementationPlan.md  ProjectStellar-Black-View-Map-Load-Investigation-AgentPlan.md  ProjectStellar-DevTexture-ColorScale-SRGB-AgentPlan-v2.md  ProjectStellar-Lightmap-Texture-CompilationProfile-FixPlan.md  ProjectStellar-NextCollisionAfterLua-AgentPlan.md  ProjectStellar-Phase10-LuaScripting-AgentPlan.md  ProjectStellar-PostImplementation-VulkanAudit-CodexPlan.md  (+10 more)
cmake/: StellarDocs.cmake
docs/: BspAuthoring.md  ClientServerArchitecture.md  Design.md  Doxyfile.in  DoxygenMainPage.md  ImplementationStatus.md  TrenchBroom.md  TrenchBroomManualQA.md
src/: main.cpp
tests/: CMakeLists.txt
tests/audio/: AudioEventRouter.cpp  GeneratedFootstepAssets.cpp  MiniaudioSink.cpp
tests/client/: AssetValidationSmoke.cpp  ClientConnect.cpp  ClientWorldReceiver.cpp  GameplayPresentation.cpp  HudPresentation.cpp  ListenHostRuntime.cpp  LocalLoopbackRuntime.cpp  MovementInputMapper.cpp  NetworkedClientRuntime.cpp  PlayerPresentation.cpp  SinglePlayerRuntime.cpp
tests/cmake/: AudioPlatformTests.cmake  BspTests.cmake  ClientTests.cmake  GraphicsTests.cmake  NetworkTests.cmake  ScriptingTests.cmake  ServerTests.cmake  TestHelpers.cmake  TrenchBroomTests.cmake  WorldTests.cmake
tests/core/: WorldAxes.cpp
tests/fixtures/: BspFixture.hpp  BspFixtureWriter.cpp
tests/fixtures/gltf/: empty_scene.gltf
tests/fixtures/materials/dev/: grid_64.stellar_material  wall_96.stellar_material
tests/fixtures/materials/invalid/: malformed_float.stellar_material  missing_texture.stellar_material  unknown_key_strict.stellar_material  unsafe_path.stellar_material
tests/fixtures/trenchbroom/: README.md  fixtures.json
tests/fixtures/trenchbroom/compiled/: README.md
tests/fixtures/trenchbroom/scripts/: gate.lua  pickup.lua
tests/fixtures/trenchbroom/src/: alias_target_zup.map  entity_matrix_zup.map  illusionary_static_zup.map  invalid_incomplete_brush.map  invalid_malformed_brush.map  invalid_missing_target.map  invalid_missing_wad_texture.map  invalid_script_escape_zup.map  light_environment_pitch_zup.map  lit_zup_room.map  material_wad_zup.map  minimal_zup_room.map  moving_door_button_zup.map  point_volume_zup.map  scripted_interaction_zup.map  spotlight_pitch_down_zup.map  spotlight_pitch_up_zup.map  spotlight_targeted_zup.map  spotlight_yaw_walls_zup.map  texture_axes_zup.map
tests/graphics/: BackendSelection.cpp  GeneratedRenderFixtures.hpp  MetalContextSmoke.cpp  MetalRenderReadback.mm  MetalShaderCompile.mm  OpenGLContextSmoke.cpp  RecordingGraphicsDevice.hpp  RenderSceneInspection.cpp  RenderSceneUpload.cpp  VulkanContextSmoke.cpp  VulkanRenderReadback.cpp  VulkanShaderCompile.cpp
tests/import/bsp/: BspEntityAuthoring.cpp  BspFixture.hpp  BspImporter.cpp  BspLightmaps.cpp  BspMaterials.cpp  BspValidation.cpp  BspVisibility.cpp  FgdContract.cpp
tests/import/gltf/: ImporterRegression.cpp
tests/integration/: BspAuthoringSmoke.cpp  BspPlayableWorldSmoke.cpp  FootstepAudioPipeline.cpp  PlayableWorldSmoke.cpp  ScriptedCollisionSmoke.cpp  ScriptedObjectColliderSmoke.cpp  ScriptedPlayableWorldSmoke.cpp
tests/math/: Geometry3.cpp
tests/network/: LoopbackTransport.cpp  Session.cpp  SnapshotCodec.cpp  SnapshotDelta.cpp  SocketTransport.cpp
tests/physics/: CharacterController.cpp  CollisionPerformanceRegression.cpp  CollisionWorld.cpp
tests/platform/: Input.cpp
tests/scene/: AnimationRuntime.cpp
tests/scripting/: LuaRuntime.cpp  ObjectColliderScriptSystem.cpp  ScriptCommandProcessor.cpp  ScriptHookDispatcher.cpp  ScriptedWorldSession.cpp  TriggerScriptSystem.cpp
tests/server/: DedicatedServer.cpp  FootstepTracker.cpp  GameplayWorld.cpp  MovementSimulation.cpp  MovementTriggerIntegration.cpp  ServerRuntime.cpp  WorldSession.cpp
tests/world/: CollisionValidation.cpp  FootstepSurface.cpp  ObjectCollider.cpp  RuntimeCollisionState.cpp  RuntimeWorld.cpp  SensorOverlapTracker.cpp  TriggerSystem.cpp  WorldMetadataValidation.cpp
(+420 files in other folders)
